fix white backround visible in the image

--- a/css/interactive-guides/circuit-breaker/circuit-breaker.scss
+++ b/css/interactive-guides/circuit-breaker/circuit-breaker.scss
@@ -159,6 +159,7 @@
 
 .transitionalPicInPod {
   height: 150px;
+  background: inherit;
   @media (max-width: 768px) {
     background: white;
   }
